prod_snapshot_2015-09-24_1030/objects/ApplicationLogs__c.object
<CustomObject>
    <description>Store all logs from Apex code here including logs generated from Apex code.</description>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <description>Line number of Apex class where the error was logged</description>
        <label>Line Number</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Level__c</fullName>
        <label>Log Level</label>
        <picklist>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceId__c</fullName>
        <description>Log for Salesforce Id for a transaction</description>
        <label>SalesforceId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used as an indicator to send email to the DL when a new record is created due to an error/exception in code.</description>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>StackTrace</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <label>TransactionID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Application Log</label>
    <listViews>
        <fullName>All_Logs</fullName>
        <columns>NAME</columns>
        <columns>Error_Message__c</columns>
        <columns>StackTrace__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Line_Number__c</columns>
        <columns>Log_Level__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Logs</label>
    </listViews>
    <listViews>
        <fullName>ApplicationLogsToday</fullName>
        <columns>NAME</columns>
        <columns>SalesforceId__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Line_Number__c</columns>
        <columns>Error_Message__c</columns>
        <columns>StackTrace__c</columns>
        <columns>Send_Email__c</columns>
        <columns>Log_Level__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>TransactionID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Log_Level__c</field>
            <operation>equals</operation>
            <value>Error,Warn</value>
        </filters>
        <filters>
            <field>Class_Name__c</field>
            <operation>equals</operation>
            <value>SiteExceptionsController</value>
        </filters>
        <label>ApplicationLogsToday</label>
    </listViews>
    <nameField>
        <label>Application Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>